Initial support for Minecraft versions 1.8 to 1.20.1